--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,26 @@ FetchContent_Declare(SFML
     SYSTEM)
 FetchContent_MakeAvailable(SFML)
 
+FetchContent_Declare(
+  imgui
+  GIT_REPOSITORY https://github.com/ocornut/imgui
+  GIT_TAG v1.91.1
+)
+FetchContent_MakeAvailable(imgui)
+
+FetchContent_Declare(
+  imgui-sfml
+  GIT_REPOSITORY https://github.com/SFML/imgui-sfml
+  GIT_TAG master
+)
+
+message(STATUS "Fetching ImGui-SFML...")
+set(IMGUI_DIR ${imgui_SOURCE_DIR})
+set(IMGUI_SFML_FIND_SFML OFF)
+set(IMGUI_SFML_IMGUI_DEMO ON)
+FetchContent_MakeAvailable(imgui-sfml)
+
 add_executable(main src/main.cpp src/processMonitor.cpp src/glad.c)
 target_compile_features(main PRIVATE cxx_std_17)
 target_include_directories(main PRIVATE ${CMAKE_SOURCE_DIR}/include)
-target_link_libraries(main PRIVATE SFML::Graphics psapi pdh opengl32)
+target_link_libraries(main PRIVATE SFML::Graphics psapi pdh opengl32 ImGui-SFML::ImGui-SFML)
